<resources>
    <string name="app_name">Raumbuchung 2.0</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buchen">buchen</string>


    <string-array name="starttimes">
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
    </string-array>

    <string-array name="endtimes">
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
    </string-array>




    <string name="LoginUsername">username eingeben</string>
    <string name="LoginPassword">passwort eingeben</string>
    <string name="LoginButton">LOGIN</string>

    <string name="HomeAddBuchung">HINZUFÜGEN</string>

    <string name="BuchungHeader">Buchungsscreen</string>
    <string name="BuchungRaumNr">Raumnummer</string>
    <string name="BuchungDatumWahl">Wähle das Datum</string>
    <string name="TestDate">19.03.2020</string>
    <string name="NeueBuchDate">Wähle das Datum</string>
    <string name="BuchungSuchButton">Suchen</string>
    <string name="BuchungDatum">Datum</string>
    <string name="BuchungNummer">Raumnummer</string>

</resources>
