<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BuchungenFragment">

    <EditText
        android:id="@+id/editText_raumsuchen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/BuchungNummer"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


    <EditText
        android:id="@+id/editText_datumsuchen"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:hint="@string/BuchungDatum"/>

    <Button
        android:id="@+id/button_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_date_range_black_24dp"
        android:layout_marginRight="5dp"/>


    </LinearLayout>





    <Button
        android:id="@+id/button_suchen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/BuchungSuchButton" />

    <ListView
        android:id="@+id/listView_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />



</LinearLayout>